			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05c: *********************************

IMP/MAN: (11/29/06, SMR) Bus parameters may now use simple arithmetic operators.

BUG: (11/29/06, DN) Assertion changing arc width (Bug #1261).
FIX: In ImmutableArcInst.withGridSize update "easyShape" flag properly.

IMP: (11/28/06, GVG) CSA regresssion run_gate_instNetList working (very simple).
Getting rid of "unknown signal" in VerilogReader for vss.

IMP: (11/28/06, SMR) When replacing pure-layer nodes, do not adjust sizes.

BUG: (11/28/06, SMR) Canceling a dialog that asks for a text field crashes.
FIX: In UserInterfaceMain.askForInput(), check result for null.

IMP: (11/28/06, GVG) CSA regression gate_basic_load half working.

IMP: (11/27/06, GVG) Well contacts in TSMC180 can connect to well arcs.

IMP: (11/22/06, GVG) First version of Lib/Verilog readers working with CSA regression det_msff_12x_testvalue.

BUG: (11/21/06, SMR) Electrical layers for TSMC180 transistors is wrong.
FIX: In MoCMOS.resizeNodes(), fix poly overhang calculation.

BUG: (11/21/06, SMR) Auto-router will not connect touching primitives that
     do not line-up.
FIX: In AutoStitch.comparePoly(), test for line-up only if one node is a cell.

IMP: (11/21/06, SMR) Added new functions to polygon merge.

BUG: (11/21/06, SMR) Wiring fails some L-shaped situations.
FIX: In SimpleWirer.planRoute(), treat ArcProto.getAngleIncrement() as degrees,
     not tenths-of-a-degree.

IMP/MAN: (11/20/06, SMR) Extractor now has options to unify Active and control minimum
     polygon size.

BUG: (11/16/06, SMR) Slow startup.
FIX: In Technology.initAllTechnologies(), batch Preference changes.

BUG: (11/15/06, GVG) Extension not added to hspice netlists (bug #1259)
FIX: Mistake was introduced while cleaning the code.

BUG: (11/14/06, DN) Check library throws assertion on directed and negated arcs.